Fragment EditPoduct was fixed, finished and tested

--- a/app/src/main/res/layout/activity_my_orders.xml
+++ b/app/src/main/res/layout/activity_my_orders.xml
@@ -6,14 +6,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Activity_Orders">
+    tools:context=".Activity_MyOrders"
+    android:background="@color/white_gray">
+
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <!--Toolbar-->
         <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/AO_appBar"
+            android:id="@+id/AMO_appBar"
             android:layout_width="0sp"
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
@@ -22,121 +24,122 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.appcompat.widget.Toolbar
+                android:id="@+id/AMO_toolbar"
                 android:fitsSystemWindows="true"
-                android:id="@+id/AO_toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:theme="@style/ToolbarIcons"
                 app:menu="@menu/menu_bar_standar"
-                app:title="@string/Pedidos"
+                app:title="@string/Mis_Pedidos"
                 app:titleTextColor="@color/white" />
 
         </com.google.android.material.appbar.AppBarLayout>
 
         <!--TV no conexion-->
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/AO_CL_text_no_conx"
+            android:id="@+id/AMO_CL_text_no_conx"
             android:visibility="gone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/red_light"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/AO_appBar">
+            app:layout_constraintTop_toBottomOf="@+id/AMO_appBar">
 
             <ImageView
-                android:contentDescription="@string/Vacio"
                 android:layout_marginStart="12sp"
-                android:id="@+id/AO_IV_noInternet"
+                android:id="@+id/AMO_IV_noInternet"
                 android:layout_width="40sp"
                 android:layout_height="40sp"
                 android:src="@drawable/wifi_off"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/AO_TV_noInternet"
+                app:layout_constraintEnd_toStartOf="@id/AMO_TV_noInternet"
                 app:tint="@color/red" />
 
             <TextView
                 android:layout_margin="12sp"
-                android:id="@+id/AO_TV_noInternet"
+                android:id="@+id/AMO_TV_noInternet"
                 android:layout_width="0sp"
                 android:layout_height="wrap_content"
-                android:text="@string/los_datos_no_est_n_actualizados"
+                android:text="@string/no_hay_pedidos_a_n"
                 android:textAlignment="center"
                 android:textColor="@color/red"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/AO_TV_noInternet"
+                app:layout_constraintStart_toEndOf="@id/AMO_TV_noInternet"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <!--Boton flotante de borrar-->
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:onClick="click_vaciar_pedidos"
+            android:onClick="click_vaciar_mis_pedidos"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginBottom="@dimen/x_large"
             android:layout_marginEnd="@dimen/x_large"
-            android:src="@drawable/delete" />
+            android:src="@drawable/delete"
+            android:contentDescription="@string/quitar_registro_de_pedidos" />
 
         <!--Recycler-->
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/AO_recycler"
-            android:layout_width="wrap_content"
+            android:id="@+id/AMO_recycler"
+            android:layout_width="match_parent"
             android:layout_height="0sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/AO_CL_text_no_conx"/>
+            app:layout_constraintTop_toBottomOf="@id/AMO_CL_text_no_conx" />
 
+        <!--Layout vacio-->
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/AO_image_empty"
+            android:id="@+id/AMO_image_empty"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="@color/white"
             android:orientation="vertical"
-            android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="@+id/AO_recycler"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageView
                 app:layout_constraintHorizontal_chainStyle="packed"
-                android:id="@+id/AO_imageCaja"
+                android:id="@+id/AMO_IV"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:contentDescription="@string/Vacio"
                 android:src="@drawable/cajas_vacias"
-                app:layout_constraintBottom_toTopOf="@+id/AO_TV_empty"
+                app:layout_constraintBottom_toTopOf="@+id/AMO_TV_vacio"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
             <TextView
                 android:textStyle="bold"
-                android:id="@+id/AO_TV_empty"
+                android:id="@+id/AMO_TV_vacio"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/no_hay_pedidos_a_n"
+                android:layout_marginTop="@dimen/x_large"
+                android:text="@string/No_hay_productos"
                 android:textAlignment="center"
                 android:textSize="@dimen/x_large"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/AO_imageCaja" />
+                app:layout_constraintTop_toBottomOf="@+id/AMO_IV" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <!-- Navigation Drawer -->
+    <!-- Navegation Drawer -->
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -144,7 +147,5 @@
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/navigation_menu_productos" />
-
-
 
 </androidx.drawerlayout.widget.DrawerLayout>
