--- a/app/src/main/res/layout/li_options_product.xml
+++ b/app/src/main/res/layout/li_options_product.xml
@@ -68,7 +68,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="30sp"
                 android:layout_height="30sp"
-                android:src="@drawable/baseline_add_24"
+                android:src="@drawable/add"
                 app:tint="@color/black"
                 android:rotation="45"
                 android:contentDescription="@string/Cerrar" />
@@ -89,7 +89,7 @@
                     android:scaleType="centerCrop"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:background="@drawable/outline_shopping_bag_24"
+                    android:background="@drawable/shopping_bag_grey"
                     android:backgroundTint="@color/white" />
 
             </FrameLayout>
