--- a/app/src/main/res/layout/recycler_product.xml
+++ b/app/src/main/res/layout/recycler_product.xml
@@ -6,6 +6,7 @@
 
     <!--AD-->
     <TextView
+        android:id="@+id/RP_Ad"
         android:textColor="@color/red_ad"
         android:padding="4sp"
         android:paddingEnd="12sp"
@@ -16,8 +17,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/RP_CV_container"
         app:layout_constraintEnd_toEndOf="parent"
-        android:text="Anuncio!!!"
-        android:textSize="24sp"
+        android:text="@string/anuncio"
+        android:textSize="@dimen/small"
         android:layout_marginEnd="28sp"
         android:layout_marginBottom="-24sp"
         android:translationZ="10sp"/>
@@ -30,11 +31,13 @@
         app:cardCornerRadius="8sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20sp"
-        android:layout_marginStart="20sp"
-        android:layout_marginEnd="20sp">
+        android:layout_marginStart="8sp"
+        android:layout_marginEnd="8sp"
+        android:layout_marginBottom="8sp">
 
         <!--CL container-->
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -55,12 +58,13 @@
                 android:layout_height="0sp"/>
 
             <TextView
-                android:layout_marginStart="20sp"
+                android:layout_marginEnd="8sp"
+                android:layout_marginStart="8sp"
                 android:layout_marginTop="20sp"
                 android:text="@string/name_product"
                 android:id="@+id/RP_TV_name"
-                android:textSize="24sp"
-                android:layout_width="wrap_content"
+                android:textSize="@dimen/medium"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/RP_IV_ImageProduct"
                 app:layout_constraintStart_toStartOf="parent"/>
@@ -68,26 +72,30 @@
             <!--Price-->
             <TextView
                 android:id="@+id/RP_TV_Price"
-                android:textSize="24sp"
+                android:textSize="@dimen/small"
                 android:text="@string/price_default"
-                android:layout_marginStart="20sp"
+                android:layout_marginEnd="8sp"
+                android:layout_marginStart="8sp"
                 android:layout_marginTop="10sp"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@+id/RP_TV_name"/>
 
 
             <!--Little description-->
             <TextView
-                android:layout_marginStart="20sp"
+                android:maxLines="1"
+                android:ellipsize="end"
+                android:layout_marginEnd="8sp"
+                android:layout_marginStart="8sp"
                 android:layout_marginTop="8sp"
-                android:textSize="20sp"
+                android:textSize="@dimen/small"
                 android:id="@+id/RP_TV_descProduct"
                 android:text="@string/little_description"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/RP_TV_Price"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
 
