--- a/app/src/main/res/layout/fragment_shopping_cart.xml
+++ b/app/src/main/res/layout/fragment_shopping_cart.xml
@@ -19,7 +19,8 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/FSC_recycler"
             android:layout_width="match_parent"
-            android:layout_height="0sp"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
@@ -95,17 +96,31 @@
                 >
 
                 <TextView
+                    android:id="@+id/FSC_Comprar"
                     android:layout_marginStart="12sp"
                     android:textSize="20sp"
                     android:textColor="@color/white"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintBottom_toTopOf="@id/FSC_PrecioTotal"
                     app:layout_constraintTop_toTopOf="parent"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/Comprar"/>
 
+                <TextView
+                    android:id="@+id/FSC_PrecioTotal"
+                    android:layout_marginStart="12sp"
+                    android:textSize="@dimen/medium"
+                    android:textColor="@color/white"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/FSC_Comprar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/Precio_total"/>
+
                 <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+                    android:id="@+id/FSC_FAB_sendOrder"
                     android:layout_marginTop="8sp"
                     android:layout_marginBottom="8sp"
                     android:layout_width="wrap_content"
@@ -113,7 +128,6 @@
                     app:icon="@drawable/payments"
                     app:iconTint="@color/white"
                     android:layout_marginEnd="12sp"
-                    android:onClick="btn_enviarPedido"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"/>
@@ -311,7 +325,7 @@
                     android:inputType="none"
                     android:minWidth="150sp"
                     android:textColor="@color/white"
-                    android:textColorHint="@color/white" />
+                    android:textColorHint="@color/white"/>
 
             </com.google.android.material.textfield.TextInputLayout>
 
