--- a/app/src/main/res/layout/recycler_shopping_cart.xml
+++ b/app/src/main/res/layout/recycler_shopping_cart.xml
@@ -1,23 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
     <!--BTN close-->
     <androidx.cardview.widget.CardView
-        android:layout_marginTop="4sp"
-        android:layout_marginEnd="12sp"
-        android:layout_marginBottom="-20sp"
-        android:layout_gravity="end"
+        android:layout_marginEnd="4sp"
+        app:layout_constraintHorizontal_bias="0"
+        android:layout_marginStart="-16sp"
+        app:layout_constraintTop_toTopOf="@id/RSC_CV_generalContainer"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/RSC_CV_generalContainer"
+        android:layout_marginTop="-8sp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:cardCornerRadius="@dimen/radius_cards"
         app:cardElevation="@dimen/cardview_default_elevation"
         android:translationZ="4sp"
-        android:backgroundTint="@color/red">
+        android:backgroundTint="@color/blue">
 
         <ImageView
             android:id="@+id/RSC_IV_delete"
@@ -31,24 +34,29 @@
     </androidx.cardview.widget.CardView>
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
+        android:layout_marginTop="10sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:id="@+id/RSC_CV_generalContainer"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:cardElevation="@dimen/cardview_default_elevation"
         app:cardCornerRadius="@dimen/radius_cards"
         android:translationZ="@dimen/cardview_default_elevation"
-        android:layout_marginStart="12sp"
-        android:layout_marginEnd="20sp"
+        android:layout_marginStart="4sp"
+        android:layout_marginEnd="4sp"
         android:layout_marginBottom="10sp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="10sp">
+        android:layout_height="wrap_content">
 
         <androidx.cardview.widget.CardView
+            app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/RSC_CV_imageContainer"
-            android:layout_width="40sp"
-            android:layout_height="40sp"
+            android:layout_width="0sp"
+            android:layout_height="0sp"
             app:cardCornerRadius="12sp"
             app:cardElevation="0sp"
             android:translationZ="0sp"
@@ -59,14 +67,24 @@
             <ImageView
                 android:contentDescription="@string/Foto_del_producto"
                 android:id="@+id/RSC_IV_productPicture"
-                android:layout_width="40sp"
-                android:layout_height="40sp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
                 android:src="@drawable/shopping_bag"/>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/gradient_cart" />
 
         </androidx.cardview.widget.CardView>
 
         <TextView
-            android:layout_marginTop="4sp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            app:layout_constraintHorizontal_bias="0"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="12sp"
             android:id="@+id/RSC_TV_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -74,19 +92,40 @@
             android:textSize="@dimen/medium"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toTopOf="@id/RSC_TV_price"
-            app:layout_constraintStart_toEndOf="@+id/RSC_CV_imageContainer"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="20sp"
             android:layout_marginEnd="20sp"/>
 
         <TextView
-            android:layout_marginBottom="4sp"
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            app:layout_constraintHorizontal_bias="0"
+            android:layout_marginTop="8sp"
+            app:layout_constraintEnd_toEndOf="parent"
             android:id="@+id/RSC_TV_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/_0_00_cup"
             android:textSize="@dimen/medium"
             app:layout_constraintTop_toBottomOf="@id/RSC_TV_name"
-            app:layout_constraintStart_toEndOf="@+id/RSC_CV_imageContainer"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="20sp"
+            app:layout_constraintBottom_toBottomOf="@id/RSC_TV_amount"/>
+
+        <TextView
+            android:textStyle="bold"
+            android:textColor="@color/white"
+            app:layout_constraintHorizontal_bias="0"
+            android:layout_marginTop="8sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginBottom="12sp"
+            android:id="@+id/RSC_TV_amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Cantidad"
+            android:textSize="@dimen/medium"
+            app:layout_constraintTop_toBottomOf="@id/RSC_TV_price"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="20sp"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
@@ -94,4 +133,4 @@
 
     </androidx.cardview.widget.CardView>
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
