--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -21,4 +21,10 @@
     <color name="green">#00A807</color>
     <color name="yellow">#BEAB00</color>
     <color name="yellow_light">#FFF496</color>
+    <color name="azul_map">#2196F3</color>
+    <color name="purple_178">#5653D3</color>
+    <color name="naranja_210">#F58D1B</color>
+    <color name="white_246">#EBF5F6</color>
+
+    <color name="mtrl_textinput_default_box_stroke_color" tools:override="true">#FFFFFF</color>
 </resources>
